--- a/PRJ/gomsu-client/src/app/pages/home/catalog/catalog.component.css
+++ b/PRJ/gomsu-client/src/app/pages/home/catalog/catalog.component.css
@@ -67,8 +67,8 @@
   background-image: linear-gradient(
     to bottom,
     transparent,
-    96%,
-    #ec8510
+    99.5%,
+    #e48e2c
   ) !important;
   position: absolute;
   top: 0;
