--- a/PRJ/gomsu-client/src/app/pages/home/catalog/catalog.component.html
+++ b/PRJ/gomsu-client/src/app/pages/home/catalog/catalog.component.html
@@ -1,4 +1,73 @@
 <section class="section-danhmuc">
+  <div class="swiper-container-catalog container">
+    <div class="swiper-wrapper danhmuc-container">
+      <div class="danhmuc swiper-slide">
+        <a href="#">
+          <img src="assets/img/danhmuc_1.webp" alt="" />
+          <div class="shadow-danhmuc"></div>
+          <div class="danhmuc-content">
+            <div class="danhmuc-title">Nồi sứ dưỡng sinh</div>
+            <span class="danhmuc-quantity">+ 0 sản phẩm</span>
+          </div>
+        </a>
+      </div>
+      <div class="danhmuc swiper-slide">
+        <a href="#">
+          <img src="assets/img/danhmuc_2.webp" alt="" />
+          <div class="shadow-danhmuc"></div>
+          <div class="danhmuc-content">
+            <div class="danhmuc-title">Phòng ăn</div>
+            <span class="danhmuc-quantity">+ 30 sản phẩm</span>
+          </div>
+        </a>
+      </div>
+      <div class="danhmuc swiper-slide">
+        <a href="#">
+          <img src="assets/img/danhmuc_3.webp" alt="" />
+          <div class="shadow-danhmuc"></div>
+          <div class="danhmuc-content">
+            <div class="danhmuc-title">Sứ dưỡng sinh</div>
+            <span class="danhmuc-quantity">+ 0 sản phẩm</span>
+          </div>
+        </a>
+      </div>
+      <div class="danhmuc swiper-slide">
+        <a href="#">
+          <img src="assets/img/danhmuc_4.webp" alt="" />
+          <div class="shadow-danhmuc"></div>
+          <div class="danhmuc-content">
+            <div class="danhmuc-title">Trà - cà phê</div>
+            <span class="danhmuc-quantity">+ 21 sản phẩm</span>
+          </div>
+        </a>
+      </div>
+      <div class="danhmuc swiper-slide">
+        <a href="#">
+          <img src="assets/img/danhmuc_5.webp" alt="" />
+          <div class="shadow-danhmuc"></div>
+          <div class="danhmuc-content">
+            <div class="danhmuc-title">Phụ kiện bàn ăn</div>
+            <span class="danhmuc-quantity">+ 0 sản phẩm</span>
+          </div>
+        </a>
+      </div>
+      <div class="danhmuc swiper-slide">
+        <a href="#">
+          <img src="assets/img/danhmuc_6.webp" alt="" />
+          <div class="shadow-danhmuc"></div>
+          <div class="danhmuc-content">
+            <div class="danhmuc-title">Sứ nghệ thuật</div>
+            <span class="danhmuc-quantity">+ 0 sản phẩm</span>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="swiper-catalog-btn-next">a</div>
+    <div class="swiper-catalog-btn-prev">b</div>
+  </div>
+</section>
+
+<!-- <section class="section-danhmuc">
   <div class="container danhmuc-container">
     <div class="danhmuc">
       <a href="#">
@@ -61,7 +130,7 @@
       </a>
     </div>
   </div>
-</section>
+</section> -->
 <section class="section-banner">
   <div class="container">
     <div class="row justify-content-between">
