--- a/PRJ/gomsu-client/src/app/pages/footer/footer.component.css
+++ b/PRJ/gomsu-client/src/app/pages/footer/footer.component.css
@@ -12,7 +12,7 @@ footer::before {
   background-size: 100% auto;
   position: absolute;
   top: -280px;
-  left: 0;
+  left: calc((100% - 1200px) / 2);
   width: 1200px;
   height: 1200px;
   opacity: 0.3;
