--- a/PRJ/gomsu-client/src/app/pages/home/catalog/catalog.component.css
+++ b/PRJ/gomsu-client/src/app/pages/home/catalog/catalog.component.css
@@ -1,24 +1,23 @@
 :host {
-  --section-danhmuc: 170px;
+  --section-danhmuc: 240px;
+}
+.section-danhmuc {
+  margin-top: 40px;
 }
 
 /* section danh mục */
-.danhmuc-container {
+/* .danhmuc-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   height: 300px;
   margin-top: 20px;
-}
-
-.danhmuc-container::before {
-  content: "";
-  background-image: url("/assets/img/bg_danhmuc_left.webp");
-}
+} */
 
 .danhmuc-container .danhmuc {
   margin: 0 auto;
+  width: var(--section-danhmuc);
 }
 
 .danhmuc-container .danhmuc a {
@@ -28,8 +27,8 @@
 }
 
 .danhmuc-container .danhmuc img {
-  width: 170px;
-  height: 170px;
+  width: var(--section-danhmuc);
+  height: var(--section-danhmuc);
   border-radius: 50%;
   transform: translateY(0px);
   z-index: 10;
@@ -74,8 +73,13 @@
   top: 0;
   left: 0;
 }
+.swiper-container-catalog {
+  overflow: hidden;
+  padding-top: 50px;
+}
 
 /* section banner */
+
 .section-banner a img {
   object-fit: cover;
   width: 100%;
