--- a/PRJ/gomsu-client/src/app/pages/home/home.component.html
+++ b/PRJ/gomsu-client/src/app/pages/home/home.component.html
@@ -1,4 +1,31 @@
 <div class="wrapper">
   <app-slider></app-slider>
   <app-catalog></app-catalog>
+  <div class="product">
+    <div class="heading container">
+      <h1 class="heading-text">Sản phẩm nội bật</h1>
+      <div class="filter">
+        <a href="#" class="filter-item filter-item-active">Tất cả</a>
+        <a href="#" class="filter-item">Bộ Trà</a>
+        <a href="#" class="filter-item">Cà Phê</a>
+        <a href="#" class="filter-item">Phụ kiện trà - Cà phê</a>
+      </div>
+    </div>
+    <div class="products container">
+      <div class="row">
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3"><app-product></app-product></div>
+      </div>
+    </div>
+  </div>
 </div>
