--- a/PRJ/gomsu-client/src/styles.css
+++ b/PRJ/gomsu-client/src/styles.css
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "swiper/swiper-bundle.css";
-@import 'swiper/css';
-@import 'swiper/css/effect-fade';
-@import 'swiper/css/navigation';
-@import 'swiper/css/pagination';
+@import "swiper/css";
+@import "swiper/css/effect-fade";
+@import "swiper/css/navigation";
+@import "swiper/css/pagination";
 
 * {
   margin: 0;
