update fe validate, be superadmin

--- a/PRJ/gomsu-client/src/app/pages/login/login.component.css
+++ b/PRJ/gomsu-client/src/app/pages/login/login.component.css
@@ -104,3 +104,31 @@
   width: 90%;
   padding-right: 30px;
 }
+
+.input:focus {
+  box-shadow: 0 0px 10px 0px #f2b250 !important;
+  transition: 0.35s ease;
+}
+
+.input.noInputEmail {
+  box-shadow: 0 0px 10px 0px #f2b250 !important;
+  transition: 0.35s ease;
+}
+
+.input.falseEmail {
+  box-shadow: 0 0px 10px 0px #b90b0b !important;
+  transition: 0.35s ease;
+}
+
+.input.trueEmail,
+.input.truePw {
+  box-shadow: 0 0px 10px 0px #5bf250 !important;
+  transition: 0.35s ease;
+}
+
+.btn-submit:disabled {
+  background-color: #ad6a23;
+  color: #fff;
+  cursor: not-allowed;
+  transition: all 0.35s ease;
+}
