--- a/PRJ/gomsu-admin/src/app/app.component.html
+++ b/PRJ/gomsu-admin/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div id="layoutSidenav">
+  <div id="layoutSidenav_nav">
+  <app-sidebar></app-sidebar>
+
+  </div>
+  <div id="layoutSidenav_content">
+    <router-outlet></router-outlet>
+
+  </div>
+</div>
