--- a/PRJ/gomsu-client/src/app/pages/login/login.component.html
+++ b/PRJ/gomsu-client/src/app/pages/login/login.component.html
@@ -53,10 +53,12 @@
         Đăng nhập
       </button>
     </div>
-    <div class="forgot-pass"><a href="#">Quên mật khẩu</a></div>
+    <div class="forgot-pass">
+      <a [routerLink]="['/forgot-password']">Quên mật khẩu</a>
+    </div>
     <div class="or">Hoặc đăng nhập bằng</div>
     <div class="login-otp">
-      <button class="login-google" >
+      <button class="login-google">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 488 512">
           <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
           <path
@@ -65,7 +67,6 @@
         </svg>
         <span> Sign in with google</span>
       </button>
-
     </div>
   </div>
 </section>
