--- a/PRJ/gomsu-client/src/app/pages/product-all/product-all.component.html
+++ b/PRJ/gomsu-client/src/app/pages/product-all/product-all.component.html
@@ -62,6 +62,32 @@
             ></path>
           </svg>
         </div>
+        <ul *ngIf="isShowDanhmuc" class="danhmuc-list">
+          <li class="danhmuc-item">
+            <div class="text">Phòng ăn</div>
+            <div class="icon">+</div>
+          </li>
+          <li class="danhmuc-item">
+            <div class="text">Trà - cà phê</div>
+            <div class="icon">+</div>
+          </li>
+          <li class="danhmuc-item">
+            <div class="text">Nồi sứ dưỡng sinh</div>
+            <div class="icon">+</div>
+          </li>
+          <li class="danhmuc-item">
+            <div class="text">Sứ dưỡng sinh</div>
+            <div class="icon">+</div>
+          </li>
+          <li class="danhmuc-item">
+            <div class="text">Phụ kiện bàn ăn</div>
+            <div class="icon">+</div>
+          </li>
+          <li class="danhmuc-item">
+            <div class="text">Sứ nghệ thuật</div>
+            <div class="icon">+</div>
+          </li>
+        </ul>
         <div class="filter button-left">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -97,6 +123,69 @@
               fill="#4B4B4B"
             ></path>
           </svg>
+        </div>
+        <div class="boloc container-fluid">
+          <div class="row">
+            <div class="col-sm-2 mx-auto">
+              <div class="boloc-header">Chọn mức giá</div>
+
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Dưới 100.000đ</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Từ 100.000đ - 200.000đ</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Từ 200.000đ - 300.000đ</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Từ 300.000đ - 500.000đ</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Từ 500.000đ - 1 triệu</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span>Từ 1 triệu - 2 triệu</div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span>Từ 2 triệu - 5 triệu</div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span>Từ 5 triệu - 10 triệu</div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span>Trên 10 triệu</div>
+
+            </div>
+            <div class="col-sm-2 mx-auto">
+              <div class="boloc-header">Hoa văn</div>
+
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">An Nhiên</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Biển Ngọc</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Biển Xanh</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Bóng Bay</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Cát Tường</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Hồn Việt</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Chim Lạc</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Chỉ Bạch Kim</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Chỉ Vàng</span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text">Cá chép cobalt</span></div>
+
+            </div>
+            <div class="col-sm-2 mx-auto">
+              <div class="boloc-header">Màu sắc</div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+            </div>
+            <div class="col-sm-2 mx-auto">
+              <div class="boloc-header">Dung tích</div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+            </div>
+            <div class="col-sm-2 mx-auto">
+              <div class="boloc-header">Chất liệu</div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+              <div class="boloc-item"><input type="checkbox" name="" id="" class="boloc-input"><span class="boloc-text"></span></div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="heading-right">
