--- a/PRJ/gomsu-client/src/app/shared/breadcrumb/breadcrumb.component.css
+++ b/PRJ/gomsu-client/src/app/shared/breadcrumb/breadcrumb.component.css
@@ -37,15 +37,18 @@
   font-weight: 400;
   font-size: 15px;
 }
-
+.danhmuc img {
+  transform: translateY(0);
+  transition: 0.3s ease;
+}
 .danhmuc:hover img {
   transform: translateY(-12px) !important;
-  transition: 0.5s ease;
 }
-
+.danhmuc .danhmuc-title {
+  transition: 0.3s ease;
+}
 .danhmuc:hover .danhmuc-title {
   color: #ec8510;
-  transition: 0.5s ease;
 }
 .danhmuc {
   position: relative;
@@ -132,11 +135,12 @@
   z-index: 100;
   background-color: #fff;
 }
-
+.container-catalog-breadcrumb .btn-swiper-catalog {
+  transition: all 0.3s ease;
+}
 .container-catalog-breadcrumb .btn-swiper-catalog:hover {
   background-color: #e99c45;
   color: #fff;
-  transition: all 0.3s ease;
 }
 .container-catalog-breadcrumb .swiper-catalog-btn-next {
   right: 0;
@@ -151,7 +155,9 @@
   /* clip-path: inset(-50%); */
 }
 
+.breadcrumb-link {
+  transition: all 0.3s ease;
+}
 .breadcrumb-link:hover {
   color: #ce8531 !important;
-  transition: all 0.3s ease;
 }
